# Briefed

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  docker-compose.yml  knip.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  release-please-config.json  vercel.json
.claude/: settings.json
.claude/commands/: make-docs.md  test.md
.claude/hooks/: build.sh  typecheck.sh
.claude/plans/: 2026-04-19-release-1-0-0.md  2026-04-25-openrouter-catalog.md  2026-04-25-track-a-openrouter-migration.md  2026-04-25-track-b-redaction-layer.md  2026-04-25-track-c-ux-profile-schedule.md  2026-05-30-api-edge-oac-hardening.md  2026-05-31-mistral-design-revamp-prompt.md  2026-06-01-notion-ui-theme-revamp.md  2026-06-02-portfolio-readme-revamp.md  2026-06-06-briefed-reader-unsubscribe-revamp.md  2026-06-18-mark-all-read.md  README.md
.claude/plans/notes/: 2026-04-25-openrouter-spike.md  todo
.codex/hooks/: test.sh
.codex/plans/: 2026-05-31-briefed-daily-triage-revamp.md  2026-06-13-public-home-demo-consent-brand.md
.cursor/rules/: git-no-commit-push.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  eval-regression.yml  pr-description.yml  release-please.yml
.vercel/: project.json
Brefied/: .thumbnail  Briefed Icon Handoff.html  Briefed Logo Directions.html  marks.jsx
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_phase1_ingestion_tables.py  0002_phase2_classification_tables.py  0003_phase3_summarization_tables.py  0004_phase4_job_extraction_tables.py  0005_phase5_unsubscribe_suggestions.py  0006_phase6_frontend_tables.py  0007_phase9_release_metadata.py  0008_phase_b_redaction_summary.py  0009_track_c_profile_schedule.py  0010_phase1_daily_triage_taxonomy.py  0011_phase2_remove_jobs_presidio.py  0012_phase3_run_membership.py  0013_phase4_category_digest_summaries.py  0014_drop_theme_preference.py  0015_default_timezone_eastern.py  0016_add_recent_subjects_to_unsubscribe_suggestions.py  0017_add_execute_lifecycle_to_unsubscribe_suggestions.py  0018_add_user_legal_consent.py  0019_scope_users_by_environment.py
backend/app/: __init__.py  lambda_api.py  lambda_worker.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  session.py
backend/app/core/: __init__.py  app_config.py  clock.py  config.py  consent.py  content_crypto.py  errors.py  ids.py  logging.py  rate_limit.py  scheduling.py  security.py  security_headers.py  sentry.py  tracing.py  yaml.py
backend/app/db/: __init__.py  models.py  session.py  types.py
backend/app/domain/: __init__.py  providers.py
backend/app/integrations/: __init__.py  ssm_secrets.py
backend/app/llm/: __init__.py  catalog.py  client.py  factory.py  schemas.py
backend/app/observability/: __init__.py  metrics.py
backend/app/schemas/: __init__.py  accounts.py  emails.py  frontend.py  jobs.py  legal.py  profile.py  rubric.py  unsubscribe.py
backend/app/services/: __init__.py  email_labels.py  runs.py
backend/app/workers/: __init__.py  messages.py
backend/eval/: promptfoo.yaml  thresholds.yaml
backend/eval/golden/: category_digest_v1.jsonl  category_digest_v1_adversarial.jsonl  job_extract_v1.jsonl  job_extract_v1_adversarial.jsonl  newsletter_group_v1.jsonl  summarize_relevant_v1.jsonl  summarize_relevant_v1_adversarial.jsonl  triage_v1.jsonl  triage_v1_adversarial.jsonl  triage_v2.jsonl  triage_v2_adversarial.jsonl
backend/eval/promptfoo_cases/: category_digest_v1.jsonl  category_digest_v1_adversarial.jsonl  newsletter_group_v1.jsonl  summarize_relevant_v1.jsonl  summarize_relevant_v1_adversarial.jsonl  triage_v2.jsonl  triage_v2_adversarial.jsonl
backend/scripts/: coverage_gate.py  ensure_local_kms.py  ensure_local_sqs.py  export_openapi.py  link_check.py  local_sqs_worker.py  redaction_quality_eval.py  run_local_dev.sh  seed_local_demo.py  test_summary.py  write_release_metadata.py
backend/tests/: conftest.py
backend/tests/chaos/: test_dlq_drill.py  test_gemini_rate_limit_drill.py  test_kms_revocation_drill.py  test_llm_circuit_drill.py  test_secret_rotation_drill.py  test_snapstart_smoke.py
backend/tests/integration/: test_accounts_api.py  test_category_digest_pipeline.py  test_classification_pipeline.py  test_classify_dispatch.py  test_consent_enforcement.py  test_emails_api.py  test_fanout_handler.py  test_fanout_schedule_filter.py  test_frontend_api.py  test_gmail_client.py  test_gmail_provider.py  test_ingest_handler.py  test_ingestion_pipeline.py  test_job_extract_dispatch.py  test_job_extract_handler.py  test_job_extract_pipeline.py  test_job_filters_api.py  test_jobs_api.py  test_lambda_api.py  (+13 more)
docs/: README.md
docs/adr/: 0001-scheduled-sync-over-gmail-push.md  0002-gemini-flash-primary-haiku-fallback.md  0003-lambda-snapstart-over-fargate.md  0004-supabase-for-1-0-0-portable-to-rds.md  0005-pwa-over-native-ios.md  0006-recommend-only-in-release-1-0-0.md  0007-mailboxprovider-interface.md  0008-kms-cmk-for-token-wrap-key.md  0009-openrouter-as-llm-routing-layer.md  0010-llm-prompt-redaction.md  0011-cloudfront-oac-over-api-gateway.md  0012-remove-presidio-redaction.md  0013-gmail-mark-read-write-scope.md  0014-execute-unsubscribe-in-release-2.md  0015-public-homepage-demo-and-enforced-consent.md  README.md
docs/architecture/: README.md  architecture.html  data-model.md
docs/contributors/: README.md
docs/demo/: briefed-demo.webm
docs/operations/: README.md  alarms.md  google-oauth-verification.md  restore.md  rollback.md  runbook.md  secrets-rotation.md
docs/release/: announcement.md  v1.0.0.md
docs/security/: README.md  SECURITY.md  threat-model.md
frontend/: .prettierignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
infra/: README.md
tests/: README.md
(+282 files in other folders)
