[project]
name = "briefed-backend"
version = "1.0.0"
description = "Briefed — Personal AI email agent. FastAPI + Claude API + Gmail + Supabase."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Kartik Hirijaganer", email = "kartikhirijaganer@gmail.com" }]
dependencies = [
    # Web framework + Lambda adapter
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mangum>=0.19",
    # Validation + settings
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    # LLM providers (Gemini primary per §20.1, Claude Haiku fallback)
    "anthropic>=0.40",
    "google-generativeai>=0.8",
    # Mailbox + external APIs
    "google-api-python-client>=2.149",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.27",
    # Persistence — SQLAlchemy + asyncpg over Supabase pooler (§19.15)
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # AWS SDK (SnapStart-friendly sync boto3 inside Lambda)
    "boto3>=1.35",
    # Reliability primitives
    "tenacity>=9.0",
    "pybreaker>=1.2",
    # Observability
    "structlog>=24.4",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    # Supabase client (kept for admin / file-storage paths)
    "supabase>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-json-report>=1.5",
    "hypothesis>=6.112",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests",
    "pip-audit>=2.7",
    # gitleaks is distributed as a binary; install via brew / apt / the
    # gitleaks GitHub Action rather than pip.
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

# --------------------------------------------------------------------------- #
# Ruff — formatter + linter. Configured to enforce Google-style docstrings,   #
# full type annotations, and import order. Runs in place of Black + isort +   #
# pydocstyle + flake8.                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]
extend-exclude = [".venv", "dist", "build", "infra", "packages"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "D",             # pydocstyle (docstrings)
    "ANN",           # flake8-annotations (type hints required)
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "PL",            # pylint subset
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
]
ignore = [
    "D203",  # conflicts with D211
    "D213",  # conflicts with D212
    "PLR0913", # allow many args in Pydantic constructors
    "B008",  # FastAPI uses Depends() / Query() defaults; idiomatic in routers.
    "PLR2004", # magic-value comparisons in parsers / byte layouts stay inline
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D", "ANN", "PLR2004", "N803", "PLC0415", "B017"]
"**/__init__.py" = ["D104"]
"backend/scripts/**/*.py" = ["D100"]
# Alembic scaffolding — env.py shape + versions/ boilerplate don't fit our docstring / import policy.
"backend/alembic/env.py" = ["I001", "ANN"]
"backend/alembic/versions/*.py" = ["D", "ANN", "I001"]
# ssm_secrets.py: boto3 requires camelCase kwargs (Names, WithDecryption).
"backend/app/integrations/ssm_secrets.py" = ["N803"]
# core/security.py + ingestion/storage.py + workers/handlers/fanout.py mirror boto3 kwargs
# (KeyId, Plaintext, Body, QueueUrl, MessageBody, ...) — we cannot rename them.
"backend/app/core/security.py" = ["N803"]
"backend/app/services/ingestion/storage.py" = ["N803"]
"backend/app/workers/handlers/fanout.py" = ["N803"]
"backend/app/services/classification/dispatch.py" = ["N803"]
# Lambda handlers receive opaque ``LambdaContext`` objects we don't own — ``Any`` is correct.
# Module-level import is deferred until the handler fires so SnapStart does not snapshot boto3+httpx.
"backend/app/lambda_worker.py" = ["ANN401", "PLC0415"]
"backend/app/lambda_api.py" = ["ANN401"]
# OAuth router defers boto3 + base64/json imports to the callback path.
"backend/app/api/v1/oauth.py" = ["PLC0415"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true

# --------------------------------------------------------------------------- #
# mypy — strict mode. Pydantic plugin wires in v2 model validation.           #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["backend"]
exclude = ["tests/", "backend/scripts/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# --------------------------------------------------------------------------- #
# pytest                                                                      #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast in-process tests with no I/O",
    "integration: tests that touch Postgres / SQS / other services",
    "e2e: full-stack end-to-end tests (Playwright)",
    "eval: prompt-evaluation tests (Promptfoo)",
]

# --------------------------------------------------------------------------- #
# Coverage — §20.1 bar: 80% repo-wide + listed 100% modules at 100%.          #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["backend/app"]
branch = true
omit = [
    "backend/app/lambda_api.py",
    "backend/app/lambda_worker.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
    "def __str__",
]
